--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "source-map-loader": "^4.0.1"
+    "source-map-loader": "^4.0.1",
+    "tailwindcss": "^3.3.6"
   }
 }
