--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "three": "^0.155.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
