--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "bcryptjs-react": "^2.4.6",
     "dotenv": "^16.3.1",
     "lottie-react": "^2.4.0",
     "multer-storage-cloudinary": "^4.0.0",
