--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.7.2",
     "bcryptjs-react": "^2.4.6",
     "dotenv": "^16.3.1",
+    "jose": "^5.4.0",
     "lottie-react": "^2.4.0",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-jwt": "^1.2.1",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
